docs/envoy/v1.13.0/_sources/api-v2/config/filter/http/health_check/v2/health_check.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/health_check/v2/health_check.proto:

Health check
============

.. _extension_envoy.filters.http.health_check:


This extension may be referenced by the qualified name *envoy.filters.http.health_check*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

Health check :ref:`configuration overview <config_http_filters_health_check>`.

.. _envoy_api_msg_config.filter.http.health_check.v2.HealthCheck:

config.filter.http.health_check.v2.HealthCheck
----------------------------------------------

`[config.filter.http.health_check.v2.HealthCheck proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/filter/http/health_check/v2/health_check.proto#L24>`_


.. code-block:: json

  {
    "pass_through_mode": "{...}",
    "cache_time": "{...}",
    "cluster_min_healthy_percentages": "{...}",
    "headers": []
  }

.. _envoy_api_field_config.filter.http.health_check.v2.HealthCheck.pass_through_mode:

pass_through_mode
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_, *REQUIRED*) Specifies whether the filter operates in pass through mode or not.
  
  
.. _envoy_api_field_config.filter.http.health_check.v2.HealthCheck.cache_time:

cache_time
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) If operating in pass through mode, the amount of time in milliseconds
  that the filter should cache the upstream response.
  
  
.. _envoy_api_field_config.filter.http.health_check.v2.HealthCheck.cluster_min_healthy_percentages:

cluster_min_healthy_percentages
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, :ref:`type.Percent <envoy_api_msg_type.Percent>`>) If operating in non-pass-through mode, specifies a set of upstream cluster
  names and the minimum percentage of servers in each of those clusters that
  must be healthy or degraded in order for the filter to return a 200.
  
  
.. _envoy_api_field_config.filter.http.health_check.v2.HealthCheck.headers:

headers
  (:ref:`route.HeaderMatcher <envoy_api_msg_route.HeaderMatcher>`) Specifies a set of health check request headers to match on. The health check filter will
  check a request’s headers against all the specified headers. To specify the health check
  endpoint, set the ``:path`` header to match on.
  
  

